# p2_cg

./: .gitignore  CMakeLists.txt
assets/scenes/: Scene 1.scn  Scene 2.scn  TP1.yml  central_sphere.yml  p1.yml  tp1.yml
assets/shaders/pbr/: pbr.frag  pbr.vert
cgdemo/: MainWindow.cpp  MainWindow.h  RayTracer.cpp  RayTracer.h
include/: Actor.h  BoxShape.h  FileReader.h  GameTimer.h  Intersection.h  LightPBR.h  MainWindow.h  P2Window.h  PBRMaterial.h  PBRRenderer.h  PlaneShape.h  RayCaster.h  RenderMode.h  Scene.h  SceneLoader.h  SceneManager.h  Shape3.h  SphereShape.h  View.h  pbrFunctions.h
include/actors/: AluminumSphere.h  CentralSphere.h  CopperSphere.h  FederalSavingsBank.h  Ground.h  PolishedBlueSphere.h  PolishedCyanSphere.h  PolishedGreenSphere.h  PolishedRedSphere.h  PolishedYellowSphere.h  SilverSphere.h  TitaniumSphere.h
src/: MainWindow.cpp  P2Window.cpp  PBRRenderer.cpp  RayCaster.cpp  SceneLoader.cpp
